# PLM

./: .env.example  .gitignore  .plm_session-DELERIUM.ndjson  .plm_session.ndjson  .plm_store.sqlite  Configure-CUDA.ps1  LICENSE  NASA EM FLUX + PLM = WARP.txt  Notes  PLM Baseline.vsdx  README.md  README.txt  SECURITY-IMPLEMENTATION.md  VERSION  cirq_test.py  conftest.py  cuda_config.json  log.rtf  plm base doc.docx  plm.arb  plm.rb  pytest.ini  run_plm.py  start_plm.ps1  test_installation.py
.githooks/: commit-msg  post-commit  pre-commit  pre-push  prepare-commit-msg
.github/: CODEOWNERS
Code_core_3/: LICENSE  README
Code_core_3/plm-formalized/: .gitignore  PROOFS.md  README.md  __init__.py  model.py  project.toml  pyproject.toml  quantum_temporal.py  stateful.py
Code_core_3/plm-formalized/plm_formalized/: __init__.py  quantum_temporal.py  stateful.py
Code_core_3/plm-formalized/quantum/: __init__.py  pyproject.toml  quantum_temporal.py  run_quantum_temporal.py
Code_core_3/plm-formalized/ruby/: plm.rb
Code_core_3/plm-formalized/stateful_quantum/: README.md
Code_core_3/plm-formalized/stateful_quantum/tests/: test_stateful_and_quantum.py
Code_core_3/plm-formalized/tests/: test_model.py
Deploy/: Deploy-PLM-Environment.ps1  PLM-AdminConsoleGUI.ps1  PLM-Environment-AdminGUI.fixed.ps1  PLM-Environment-AdminGUI.ps1  runnerPlm_env.ps1
code-core-3/: ase_ref.rb  (+3 more)
plm_bak/plm-formalized/: .gitignore  LOCAL_BUILD.txt  NOTICE  PROOFS.md  README.md  pyproject.toml
plm_bak/plm-formalized/plm_formalized/: __init__.py  model.py  quantum_temporal.py  stateful.py
plm_bak/plm-formalized/ruby/: plm.rb
plm_bak/plm-formalized/scripts/: run_quantum_temporal.py
plm_bak/plm-formalized/tests/: test_model.py  test_stateful.py
(+116 files in other folders)
