[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plm-formalized"
version = "0.1.0"
description = "Formalized PLM (Pi–Lambda–Mu) symbolic model"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
authors = [{name = "Your Name"}]

dependencies = [
    "cirq",
    "sympy",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools]
packages = ["plm_formalized"]
