[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plm-formalized"
version = "0.2.0"
description = "Formalized PLM model with stateful and quantum temporal extensions"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [{name = "Joshua Harris"}]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]
quantum = ["cirq>=1.0"]

[tool.setuptools]
packages = ["plm_formalized"]
